--- a/Data Analysis with Python Course Project.ipynb
+++ b/Data Analysis with Python Course Project.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Data Analysis with Python Course Project\n",
     "***\n",
     "\n",
-    "In this project, you'll be analysing listings data from an e-commerce Platform. \n",
+    "In this project, I analysed listings data from an e-commerce Platform. \n",
     "\n",
     "The dataset is stored in the `data/project_data.xlsx` file. It contains listing information posted on the platform.\n",
     "\n",
